# rhachis

./: .gitignore  Cargo.toml  LICENSE  README.md  run
dev/: Design.md
examples/: README.md  cube.mtl  image.rs  obj.rs  perlin.rs  perlinimage.rs  rand.rs  simple.wgsl  texture.mtl  tri.rs  window.rs
run-macro/: Cargo.toml  README.md
run-macro/src/: lib.rs
src/: graphics.rs  input.rs  lib.rs  math.rs  rand.rs  renderers.rs  simple.wgsl
