[package]
name = "rhachis"
description = "A game framework based off wgpu"
license = "MIT"
version = "0.3.1"
edition = "2021"
repository = "https://github.com/SalsaGal/rhachis"
keywords = ["gamedev"]

[dependencies]
bytemuck = { version = "1.12.1", features = ["derive"] }
glam = "0.21.3"
parking_lot = "0.12.1"
pollster = "0.2.5"
wgpu = "0.13.1"
winit = "0.27.2"
image = "0.24.2"
paste = "1.0.9"
tobj = "3.2.3"
anyhow = "1.0.64"
rhachis-run-macro = "0.1.1"
iter_tools = "0.1.4"
